package org.example;

public class Accion {
    private String nombre;
    private double valorUnitarioActual;
}
