package org.example;

abstract class Inversion {

    int getValorActual() {
        return 0;
    }
}
