package org.example;

public class InversionAccion {
    public int getValorActual() {
        return 0;
    }
}
