package org.example;

import java.util.Date;

public class InversionPlazoFijo {

    private Date fechaConstitucion;
    private int montoInicial;
    private double tasaInteresDiaria;


    public int getValorActual() {
        return 0;
    }

}
