package org.example;

public class Inversor {
    private String nombres;
}
